--- a/maker/uc/templates/uc_create_bot.html
+++ b/maker/uc/templates/uc_create_bot.html
@@ -41,21 +41,30 @@
               <div class="row">
                 <div class="col-sm-4 border-right">
                   <div class="description-block">
-                     <button class="btn btn-block btn-primary" type="button">启动</button>
+<a class="btn">
+<i class="fa fa-play"></i>
+启动
+</a>
                   </div>
                   <!-- /.description-block -->
                 </div>
                 <!-- /.col -->
                 <div class="col-sm-4 border-right">
                   <div class="description-block">
-                      <button class="btn btn-block btn-danger" type="button">关闭</button>
+<a class="btn">
+<i class="fa fa-pause"></i>
+停止
+</a>
                   </div>
                   <!-- /.description-block -->
                 </div>
                 <!-- /.col -->
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                   <div class="description-block">
-                      <button class="btn btn-block btn-success" type="button">统计</button>
+<a class="btn">
+<i class="fa fa-bar-chart"></i>
+统计
+</a>
                   </div>
                   <!-- /.description-block -->
                 </div>
@@ -82,21 +91,30 @@
               <div class="row">
                 <div class="col-sm-4 border-right">
                   <div class="description-block">
-                     <button class="btn btn-block btn-primary" type="button">启动</button>
+<a class="btn">
+<i class="fa fa-play"></i>
+启动
+</a>
                   </div>
                   <!-- /.description-block -->
                 </div>
                 <!-- /.col -->
                 <div class="col-sm-4 border-right">
                   <div class="description-block">
-                      <button class="btn btn-block btn-danger" type="button">关闭</button>
+<a class="btn">
+<i class="fa fa-pause"></i>
+停止
+</a>
                   </div>
                   <!-- /.description-block -->
                 </div>
                 <!-- /.col -->
                 <div class="col-sm-4">
                   <div class="description-block">
-                      <button class="btn btn-block btn-success" type="button">统计</button>
+<a class="btn">
+<i class="fa fa-bar-chart"></i>
+统计
+</a>
                   </div>
                   <!-- /.description-block -->
                 </div>
@@ -123,21 +141,30 @@
               <div class="row">
                 <div class="col-sm-4 border-right">
                   <div class="description-block">
-                     <button class="btn btn-block btn-primary" type="button">启动</button>
+<a class="btn">
+<i class="fa fa-play"></i>
+启动
+</a>
                   </div>
                   <!-- /.description-block -->
                 </div>
                 <!-- /.col -->
                 <div class="col-sm-4 border-right">
                   <div class="description-block">
-                      <button class="btn btn-block btn-danger" type="button">关闭</button>
+<a class="btn">
+<i class="fa fa-pause"></i>
+停止
+</a>
                   </div>
                   <!-- /.description-block -->
                 </div>
                 <!-- /.col -->
                 <div class="col-sm-4">
                   <div class="description-block">
-                      <button class="btn btn-block btn-success" type="button">统计</button>
+<a class="btn">
+<i class="fa fa-bar-chart"></i>
+统计
+</a>
                   </div>
                   <!-- /.description-block -->
                 </div>
