update create page -2

--- a/maker/uc/templates/uc_create_bot.html
+++ b/maker/uc/templates/uc_create_bot.html
@@ -35,7 +35,7 @@
               <h5 class="widget-user-desc">微信机器人</h5>
             </div>
             <div class="widget-user-image">
-              <img class="img-circle" src="/static/dist/img/user1-128x128.jpg" alt="User Avatar">
+              <img class="img-circle" src="/static/dist/img/weixin.jpg" alt="User Avatar">
             </div>
             <div class="box-footer">
               <div class="row">
@@ -85,7 +85,7 @@
               <h5 class="widget-user-desc">QQ机器人</h5>
             </div>
             <div class="widget-user-image">
-              <img class="img-circle" src="/static/dist/img/user1-128x128.jpg" alt="User Avatar">
+              <img class="img-circle" src="/static/dist/img/qq.jpg" alt="User Avatar">
             </div>
             <div class="box-footer">
               <div class="row">
@@ -135,7 +135,7 @@
               <h5 class="widget-user-desc">微博机器人</h5>
             </div>
             <div class="widget-user-image">
-              <img class="img-circle" src="/static/dist/img/user1-128x128.jpg" alt="User Avatar">
+              <img class="img-circle" src="/static/dist/img/weibo.jpg" alt="User Avatar">
             </div>
             <div class="box-footer">
               <div class="row">
