--- a/maker/static/tuling123/css/assist_user_appid_list.css
+++ b/maker/static/tuling123/css/assist_user_appid_list.css
@@ -1,23 +1,23 @@
-.personal_right .gongneng {
+.content-wrapper .gongneng {
 	margin: 0 15px;
 	margin-bottom:80px;
 	overflow:hidden;
 }
-.personal_right .gongneng .gongneng_box {
+.content-wrapper .gongneng .gongneng_box {
 	margin: 0 auto;
 	width: 100%;
 }
-.personal_right .gongneng .gongneng_box dl {
+.content-wrapper .gongneng .gongneng_box dl {
 	width: 120px;
 	float: left;
 	margin: 20px 30px 0 0;
 	position: relative;
 }
-.personal_right .gongneng .gongneng_box dl dt {
+.content-wrapper .gongneng .gongneng_box dl dt {
 	width: 120px;
 	height: 120px;
 }
-.personal_right .gongneng .gongneng_box dl .featureSel_item {
+.content-wrapper .gongneng .gongneng_box dl .featureSel_item {
 	width: 100px;
 	height: 100px;
 	margin-top: 10px;
@@ -27,29 +27,33 @@
 	-moz-border-radius: 5px;
 	text-align: center;
 	vertical-align: center;
+	position: relative;
 }
 
-.personal_right .gongneng .gongneng_box dl .featureSel_item img {
+/* .content-wrapper .gongneng .gongneng_box dl .featureSel_item .icon {
 	width: 70px;
 	height: 70px;
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	margin-top: 5px;
-}
+} */
 
-.personal_right .gongneng .gongneng_box dl .featureSel_item p {
+.content-wrapper .gongneng .gongneng_box dl .featureSel_item h2 {
 	margin-top: 5px;
-	font-size: 14px;
-	color:#000;
+	font-size: 16px;
+	color:#fff;
+	position: relative;
+	bottom: -105px;
 }
 
 
 
-.personal_right .gongneng .gongneng_box dl dd {
+.content-wrapper .gongneng .gongneng_box dl dd {
 	margin: 10px auto 0;
+	padding-bottom: 10px;
 }
-.personal_right .gongneng .gongneng_box dl dd a {
+.content-wrapper .gongneng .gongneng_box dl dd a {
 	width: 90px;
 	color: #fff;
 	height: 35px;
@@ -62,7 +66,7 @@
 	background: #ff9957;
 	text-decoration: none;
 }
-.personal_right .gongneng .gongneng_box dl dd.icon {
+.content-wrapper .gongneng .gongneng_box dl dd.icon {
 	background: url(../img/icon104.png) no-repeat;
 	position: absolute;
 	top: 0;
@@ -72,7 +76,7 @@
 	height: 40px;
 	margin: 0;
 }
-.personal_right .gongneng .gongneng_box dl dd .switch {
+.content-wrapper .gongneng .gongneng_box dl dd .switch {
 	width: 100px;
 	float: none;
 	margin: 0 auto;
@@ -93,7 +97,69 @@
 	display: block;
 }
 
-.personal_right .fenlei1 .fenleibox{
+.content-wrapper .fenlei1 .fenleibox{
      float:left;
      position: relative;
+}
+
+
+/* on off开关按钮 */
+.switch {
+	float: left;
+	cursor: pointer;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	border: 1px solid;
+	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+	position: relative;
+	text-align: left;
+	overflow: hidden;
+	line-height: 8px;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	-o-user-select: none;
+	user-select: none;
+	width: 100px;
+	height: 33px;
+}
+.switch .switch-animate {
+	width: 150px;
+	height: 33px;
+	display: inline-block;
+	position: relative;
+	top: 0;
+	-webkit-transition: left 0.5s;
+	-moz-transition: left 0.5s;
+	-o-transition: left 0.5s;
+	transition: left 0.5s;
+}
+.switch .switch-animate.switch-on {
+	left: 0;
+}
+.switch .switch-animate.switch-off {
+	left: -50%;
+}
+ .switch .switch-animate span {
+	float: left;
+	width: 50px;
+	height: 33px;
+	display: block;
+	text-align: center;
+	line-height: 33px;
+	font-size: 12px;
+	padding: 0;
+
+	border: 0;
+}
+.switch .switch-animate .left {
+	background: #CAE1FF;
+	color: #fff;
+}
+ .switch .switch-animate .center {
+	background: #e3e7eb;
+}
+.switch .switch-animate .right {
+	background: #cbd1d7;
 }
