--- a/maker/uc/templates/uc_home.html
+++ b/maker/uc/templates/uc_home.html
@@ -12,104 +12,126 @@
 
 {% block uc_title %}<span>产品动态</span>{% endblock %}
 {% block uc_content %}
- <ul class="message" id="message_z"> 
-     <li> 
-      <div> 
-       <span title="" class="title">图灵机器人官网3.0版正式上线</span> 
-       <span></span> 
-       <span class="details" amid="" st="off">查看详情</span> 
-      </div> 
-      <div style="display:none"> 
-       <i class="line"></i> 
-       <div class="item-content">
-        2015年10月29日，图灵机器人官网3.0版正式上线
-       </div> 
-      </div> </li> 
-     <li> 
-      <div> 
-       <span title="" class="title">图灵机器人注册用户超100000</span> 
-       <span></span> 
-       <span class="details" amid="" st="off">查看详情</span> 
-      </div> 
-      <div style="display:none"> 
-       <i class="line"></i> 
-       <div class="item-content">
-        2015年10月，图灵机器人注册用户累计超100000
-       </div> 
-      </div> </li> 
-     <li> 
-      <div> 
-       <span title="" class="title">图灵机器人荣获2015年度创新产品奖</span> 
-       <span></span> 
-       <span class="details" amid="" st="off">查看详情</span> 
-      </div> 
-      <div style="display:none"> 
-       <i class="line"></i> 
-       <div class="item-content">
-        2015年9月23日，图灵机器人荣获由商界传媒主办的“中国产品创新高峰论坛”颁发的“2015年度创新产品奖”
-       </div> 
-      </div> </li> 
-     <li> 
-      <div> 
-       <span title="" class="title">图灵机器人默认日调用次数提升至5000次</span> 
-       <span></span> 
-       <span class="details" amid="" st="off">查看详情</span> 
-      </div> 
-      <div style="display:none"> 
-       <i class="line"></i> 
-       <div class="item-content">
-        2014年11月15日，图灵机器人默认调用次数提升至5000次/天
-       </div> 
-      </div> </li> 
-     <li> 
-      <div> 
-       <span title="" class="title">图灵机器人平台正式对外发布</span> 
-       <span></span> 
-       <span class="details" amid="" st="off">查看详情</span> 
-      </div> 
-      <div style="display:none"> 
-       <i class="line"></i> 
-       <div class="item-content">
-        2014年11月7日，图灵机器人于北京3W咖啡正式对外发布
-       </div> 
-      </div> </li> 
-     <li> 
-      <div> 
-       <span title="" class="title">图灵机器人注册用户超50000</span> 
-       <span></span> 
-       <span class="details" amid="" st="off">查看详情</span> 
-      </div> 
-      <div style="display:none"> 
-       <i class="line"></i> 
-       <div class="item-content">
-        2015年5月，图灵机器人注册用户累计超50000
-       </div> 
-      </div> </li> 
-     <li> 
-      <div> 
-       <span title="" class="title">图灵机器人注册用户超20000</span> 
-       <span></span> 
-       <span class="details" amid="" st="off">查看详情</span> 
-      </div> 
-      <div style="display:none"> 
-       <i class="line"></i> 
-       <div class="item-content">
-        2014年12月15日，图灵机器人注册用户累计超20000
-       </div> 
-      </div> </li> 
-     <li> 
-      <div> 
-       <span title="" class="title">图灵机器人新增机器人调用统计功能</span> 
-       <span></span> 
-       <span class="details" amid="" st="off">查看详情</span> 
-      </div> 
-      <div style="display:none"> 
-       <i class="line"></i> 
-       <div class="item-content">
-        2014年12月28日，图灵机器人新增机器人调用统计功能
-       </div> 
-      </div> </li> 
-    </ul> 
+
+      <!-- row -->
+      <div class="row">
+        <div class="col-md-12">
+          <!-- The time line -->
+          <ul class="timeline">
+            <!-- timeline time label -->
+            <li class="time-label">
+                  <span class="bg-red">
+                    10 Feb. 2014
+                  </span>
+            </li>
+            <!-- /.timeline-label -->
+            <!-- timeline item -->
+            <li>
+              <i class="fa fa-envelope bg-blue"></i>
+
+              <div class="timeline-item">
+                <span class="time"><i class="fa fa-clock-o"></i> 12:05</span>
+
+                <h3 class="timeline-header"><a href="#">Support Team</a> sent you an email</h3>
+
+                <div class="timeline-body">
+                  Etsy doostang zoodles disqus groupon greplin oooj voxy zoodles,
+                  weebly ning heekya handango imeem plugg dopplr jibjab, movity
+                  jajah plickers sifteo edmodo ifttt zimbra. Babblely odeo kaboodle
+                  quora plaxo ideeli hulu weebly balihoo...
+                </div>
+                <div class="timeline-footer">
+                  <a class="btn btn-primary btn-xs">Read more</a>
+                  <a class="btn btn-danger btn-xs">Delete</a>
+                </div>
+              </div>
+            </li>
+            <!-- END timeline item -->
+            <!-- timeline item -->
+            <li>
+              <i class="fa fa-user bg-aqua"></i>
+
+              <div class="timeline-item">
+                <span class="time"><i class="fa fa-clock-o"></i> 5 mins ago</span>
+
+                <h3 class="timeline-header no-border"><a href="#">Sarah Young</a> accepted your friend request</h3>
+              </div>
+            </li>
+            <!-- END timeline item -->
+            <!-- timeline item -->
+            <li>
+              <i class="fa fa-comments bg-yellow"></i>
+
+              <div class="timeline-item">
+                <span class="time"><i class="fa fa-clock-o"></i> 27 mins ago</span>
+
+                <h3 class="timeline-header"><a href="#">Jay White</a> commented on your post</h3>
+
+                <div class="timeline-body">
+                  Take me to your leader!
+                  Switzerland is small and neutral!
+                  We are more like Germany, ambitious and misunderstood!
+                </div>
+                <div class="timeline-footer">
+                  <a class="btn btn-warning btn-flat btn-xs">View comment</a>
+                </div>
+              </div>
+            </li>
+            <!-- END timeline item -->
+            <!-- timeline time label -->
+            <li class="time-label">
+                  <span class="bg-green">
+                    3 Jan. 2014
+                  </span>
+            </li>
+            <!-- /.timeline-label -->
+            <!-- timeline item -->
+            <li>
+              <i class="fa fa-camera bg-purple"></i>
+
+              <div class="timeline-item">
+                <span class="time"><i class="fa fa-clock-o"></i> 2 days ago</span>
+
+                <h3 class="timeline-header"><a href="#">Mina Lee</a> uploaded new photos</h3>
+
+                <div class="timeline-body">
+                  <img src="http://placehold.it/150x100" alt="..." class="margin">
+                  <img src="http://placehold.it/150x100" alt="..." class="margin">
+                  <img src="http://placehold.it/150x100" alt="..." class="margin">
+                  <img src="http://placehold.it/150x100" alt="..." class="margin">
+                </div>
+              </div>
+            </li>
+            <!-- END timeline item -->
+            <!-- timeline item -->
+            <li>
+              <i class="fa fa-video-camera bg-maroon"></i>
+
+              <div class="timeline-item">
+                <span class="time"><i class="fa fa-clock-o"></i> 5 days ago</span>
+
+                <h3 class="timeline-header"><a href="#">Mr. Doe</a> shared a video</h3>
+
+                <div class="timeline-body">
+                  <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/tMWkeBIohBs" frameborder="0" allowfullscreen></iframe>
+                  </div>
+                </div>
+                <div class="timeline-footer">
+                  <a href="#" class="btn btn-xs bg-maroon">See comments</a>
+                </div>
+              </div>
+            </li>
+            <!-- END timeline item -->
+            <li>
+              <i class="fa fa-clock-o bg-gray"></i>
+            </li>
+          </ul>
+        </div>
+        <!-- /.col -->
+      </div>
+      <!-- /.row -->
+
 {% endblock %}  
 {% block my_js %}
 <script>
