upate uc home -2

--- a/maker/uc/templates/uc_base.html
+++ b/maker/uc/templates/uc_base.html
@@ -78,7 +78,7 @@ desired effect
      {% block uc_content_header %}
       <h1>
         {% block uc_title %}{% endblock %}
-        <small>{% block uc_title_desc %}Optional description{% endblock %}</small>
+<!--        <small>{% block uc_title_desc %}Optional description{% endblock %}</small>-->
       </h1>
       <ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-dashboard"></i> 主页</a></li>
