--- a/maker/uc/templates/uc_home.html
+++ b/maker/uc/templates/uc_home.html
@@ -18,13 +18,15 @@
         <div class="col-md-12">
           <!-- The time line -->
           <ul class="timeline">
+           
             <!-- timeline time label -->
             <li class="time-label">
                   <span class="bg-red">
-                    10 Feb. 2014
+                    2016年4月23日
                   </span>
             </li>
             <!-- /.timeline-label -->
+            
             <!-- timeline item -->
             <li>
               <i class="fa fa-envelope bg-blue"></i>
@@ -32,97 +34,46 @@
               <div class="timeline-item">
                 <span class="time"><i class="fa fa-clock-o"></i> 12:05</span>
 
-                <h3 class="timeline-header"><a href="#">Support Team</a> sent you an email</h3>
+                <h3 class="timeline-header"><a href="#"></a>BotDocker 内测版上线</h3>
 
                 <div class="timeline-body">
-                  Etsy doostang zoodles disqus groupon greplin oooj voxy zoodles,
-                  weebly ning heekya handango imeem plugg dopplr jibjab, movity
-                  jajah plickers sifteo edmodo ifttt zimbra. Babblely odeo kaboodle
-                  quora plaxo ideeli hulu weebly balihoo...
+                  国际上对机器人的概念已经逐渐趋近一致。一般来说，人们都可以接受这种说法，即机器人是靠自身动力和控制能力来实现各种功能的一种机器。联合国标准化组织采纳了美国机器人协会给机器人下的定义：“一种可编程和多功能的操作机；或是为了执行不同的任务而具有可用电脑改变和可编程动作的专门系统。”它能为人类带来许多方便之处！
                 </div>
                 <div class="timeline-footer">
-                  <a class="btn btn-primary btn-xs">Read more</a>
-                  <a class="btn btn-danger btn-xs">Delete</a>
+                  <a class="btn btn-primary btn-xs">详情</a>
                 </div>
               </div>
             </li>
             <!-- END timeline item -->
-            <!-- timeline item -->
-            <li>
-              <i class="fa fa-user bg-aqua"></i>
-
-              <div class="timeline-item">
-                <span class="time"><i class="fa fa-clock-o"></i> 5 mins ago</span>
-
-                <h3 class="timeline-header no-border"><a href="#">Sarah Young</a> accepted your friend request</h3>
-              </div>
-            </li>
-            <!-- END timeline item -->
-            <!-- timeline item -->
-            <li>
-              <i class="fa fa-comments bg-yellow"></i>
-
-              <div class="timeline-item">
-                <span class="time"><i class="fa fa-clock-o"></i> 27 mins ago</span>
-
-                <h3 class="timeline-header"><a href="#">Jay White</a> commented on your post</h3>
-
-                <div class="timeline-body">
-                  Take me to your leader!
-                  Switzerland is small and neutral!
-                  We are more like Germany, ambitious and misunderstood!
-                </div>
-                <div class="timeline-footer">
-                  <a class="btn btn-warning btn-flat btn-xs">View comment</a>
-                </div>
-              </div>
-            </li>
-            <!-- END timeline item -->
+            
+            
             <!-- timeline time label -->
             <li class="time-label">
-                  <span class="bg-green">
-                    3 Jan. 2014
+                  <span class="bg-red">
+                    2016年3月23日
                   </span>
             </li>
             <!-- /.timeline-label -->
+            
             <!-- timeline item -->
             <li>
-              <i class="fa fa-camera bg-purple"></i>
+              <i class="fa fa-envelope bg-blue"></i>
 
               <div class="timeline-item">
-                <span class="time"><i class="fa fa-clock-o"></i> 2 days ago</span>
+                <span class="time"><i class="fa fa-clock-o"></i> 12:05</span>
 
-                <h3 class="timeline-header"><a href="#">Mina Lee</a> uploaded new photos</h3>
-
-                <div class="timeline-body">
-                  <img src="http://placehold.it/150x100" alt="..." class="margin">
-                  <img src="http://placehold.it/150x100" alt="..." class="margin">
-                  <img src="http://placehold.it/150x100" alt="..." class="margin">
-                  <img src="http://placehold.it/150x100" alt="..." class="margin">
-                </div>
-              </div>
-            </li>
-            <!-- END timeline item -->
-            <!-- timeline item -->
-            <li>
-              <i class="fa fa-video-camera bg-maroon"></i>
-
-              <div class="timeline-item">
-                <span class="time"><i class="fa fa-clock-o"></i> 5 days ago</span>
-
-                <h3 class="timeline-header"><a href="#">Mr. Doe</a> shared a video</h3>
+                <h3 class="timeline-header"><a href="#"></a>BotDocker 原型定义</h3>
 
                 <div class="timeline-body">
-                  <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/tMWkeBIohBs" frameborder="0" allowfullscreen></iframe>
-                  </div>
+                  国际上对机器人的概念已经逐渐趋近一致。一般来说，人们都可以接受这种说法，即机器人是靠自身动力和控制能力来实现各种功能的一种机器。联合国标准化组织采纳了美国机器人协会给机器人下的定义：“一种可编程和多功能的操作机；或是为了执行不同的任务而具有可用电脑改变和可编程动作的专门系统。”它能为人类带来许多方便之处！
                 </div>
                 <div class="timeline-footer">
-                  <a href="#" class="btn btn-xs bg-maroon">See comments</a>
+                  <a class="btn btn-primary btn-xs">详情</a>
                 </div>
               </div>
             </li>
             <!-- END timeline item -->
+            
             <li>
               <i class="fa fa-clock-o bg-gray"></i>
             </li>
