upate other templates

--- a/maker/uc/templates/uc_basic_info.html
+++ b/maker/uc/templates/uc_basic_info.html
@@ -9,5 +9,54 @@
 
 {% block uc_title %}<span>基本资料</span>{% endblock %}
 {% block uc_content %}
+ <form class="form-horizontal">
+<div class="box box-primary">
+<div class="box-header with-border">
+  <h3 class="box-title"></h3>
+</div>
 
+                  <div class="form-group">
+                    <label for="inputName" class="col-sm-2 control-label">账号</label>
+
+                    <div class="col-sm-10">
+                      <input type="email" class="form-control" id="inputName" placeholder="" style="width: 518px;">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="inputEmail" class="col-sm-2 control-label">别名</label>
+
+                    <div class="col-sm-10">
+                      <input type="email" class="form-control" id="inputEmail" placeholder="" style="width: 518px;">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="inputName" class="col-sm-2 control-label">性别</label>
+
+                    <div class="col-sm-10">
+                      <input type="text" class="form-control" id="inputName" placeholder="" style="width: 518px;">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="inputExperience" class="col-sm-2 control-label">Email</label>
+                    <div class="col-sm-10">
+                      <input type="text" class="form-control" id="inputName" placeholder="" style="width: 518px;">
+                    </div>
+                  </div>
+
+                  <div class="form-group">
+                    <label for="inputSkills" class="col-sm-2 control-label">电话号码</label>
+                    <div class="col-sm-10">
+                      <input type="text" class="form-control" id="inputName" placeholder="" style="width: 518px;">
+                    </div>
+                  </div>
+                   
+     </br>
+     <div class="box-footer">
+<button type="submit" class="btn btn-primary">保存</button>
+</div>
+</div>
+
+
+
+</form>
 {% endblock %}
