--- a/maker/uc/templates/uc_white_list.html
+++ b/maker/uc/templates/uc_white_list.html
@@ -9,7 +9,12 @@
 
 {% block uc_title %}<span>白名单管理</span>{% endblock %}
 {% block uc_content %}
-
+<div class="box box-primary">
+<div class="box-header with-border">
+  <h3 class="box-title">此功能正在建设中...</h3>
+</div>
+ <div ><img class="img-responsive pad" alt="Photo" src="/static/images/under_construction.png"></div>
+</div>
 {% endblock %}
 
 <script>
