--- a/maker/uc/templates/uc_corpus_def.html
+++ b/maker/uc/templates/uc_corpus_def.html
@@ -16,20 +16,20 @@
             </div>
             <!-- /.box-header -->
             <!-- form start -->
-            <form class="form-horizontal">
+            <form class="form-horizontal" action="/uc/corpusdef/" method="post" enctype="multipart/form-data">
               <div class="box-body">
                 <div class="form-group">
                   <label for="inputEmail3" class="col-sm-2 control-label">问题</label>
 
                   <div class="col-sm-10">
-                    <input type="text" class="form-control" id="inputEmail3" placeholder="">
+                    <input type="text" class="form-control" id="inputEmail3" name="corpus.question" placeholder="">
                   </div>
                 </div>
                 <div class="form-group">
                   <label for="inputPassword3" class="col-sm-2 control-label">答案</label>
 
                   <div class="col-sm-10">
-                    <input type="text" class="form-control" id="inputPassword3" placeholder="">
+                    <input type="text" class="form-control" id="inputPassword3" name="corpus.answer"  placeholder="">
                   </div>
                 </div>
               </div>
