Phase-II of coding

--- a/maker/uc/templates/uc_create_bot.html
+++ b/maker/uc/templates/uc_create_bot.html
@@ -176,6 +176,14 @@
           <!-- /.widget-user -->
         </div>
      </div>
+
+     <!-- change by ysx, for temp debug... -->
+     <div class="box-footer">
+        <form action="/uc/createbot/" method="post">
+            <button type="submit" class="btn btn-info">提交</button>
+        </form>
+     </div>
+
       <!-- /.row -->
 {% endblock %}
 {% block your_js %}
