--- a/maker/uc/templates/uc_header.html
+++ b/maker/uc/templates/uc_header.html
@@ -85,7 +85,7 @@
               <!-- The user image in the navbar-->
               <img src="/static/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
               <!-- hidden-xs hides the username on small devices so only the image appears. -->
-              <span class="hidden-xs">李开复</span>
+              <span class="hidden-xs">{{user_name}}</span>
             </a>
             <ul class="dropdown-menu">
               <!-- The user image in the menu -->
