--- a/maker/uc/templates/uc_left.html
+++ b/maker/uc/templates/uc_left.html
@@ -9,7 +9,7 @@
           <img src="/static/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p>李开复</p>
+          <p>{{user_name}}</p>
           <!-- Status -->
           <a href="#"><i class="fa fa-circle text-success"></i> 在线</a>
         </div>
