--- a/maker/uc/templates/uc_header.html
+++ b/maker/uc/templates/uc_header.html
@@ -93,8 +93,9 @@
                 <img src="/static/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                 <p>
-                  李开复
-                  <small>Member since Nov. 2012</small>
+                    {{user_name}}
+                  <small>Member since {{join_since}}</small>
+                  <small>Last Login {{last_login}}</small>
                 </p>
               </li>
 
@@ -104,7 +105,7 @@
                   <a href="{% url 'basic_info' %}" class="btn btn-default btn-flat">个人资料</a>
                 </div>
                 <div class="pull-right">
-                  <a href="#" class="btn btn-default btn-flat">退出</a>
+                  <a href="/uc/logout/" class="btn btn-default btn-flat">退出</a>
                 </div>
               </li>
             </ul>
